Fix to overlap bug in custom date range

--- a/src/public/packages/savanna-theme/sass/var/general/shame/SearchFacets-CustomDate.scss
+++ b/src/public/packages/savanna-theme/sass/var/general/shame/SearchFacets-CustomDate.scss
@@ -1,7 +1,7 @@
 .customDatePanel{
 	margin-left: 5px;
 	
-	&:nth-child(n+2){
+	.x-anchor-form-item:nth-child(n+2){
 		margin-top: -15px;
 	}
 	
